syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "/pb";

package pb;

service Conference{
  rpc HealthCheck(Request) returns (Response);
  rpc StartConference(StartConferenceRequest) returns (StartConferenceResponse);
}


message Request {
  string data = 1;
}

message Response {
  string result = 1;
}


message StartConferenceRequest {
    string ConferenceID = 1;
    string OrganizerID = 2;
    string Type = 3;
    google.protobuf.Timestamp StartTime = 4;
    google.protobuf.Timestamp EndTime = 5;
    bool ChatPermission = 6;
    bool Broadcast = 7;
    uint32 ParticipantLimit = 8;
    string Title = 9;
    string Description = 10;
    string Link = 11;
    string Interest = 12;
}

message StartConferenceResponse {
    string ConferenceID = 1;
}